# miniscience

meshes/: CMakeLists.txt  task1.cpp  task2.cpp
meshes/Step0/: task0part1.cpp  task0part2.cpp  task0part3.cpp
meshes/Step1/: task1.cpp
meshes/Step2/: task2.cpp
vtk/: CMakeLists.txt  task.cpp  tor.STL  Ссылки на видео.txt
